# mlops-team50-chat

./: .gitignore  README.MD  example.env  pyproject.toml
app/: censor.py  main.py  models.py  ws.py
app/static/: chat.js  userform.js
app/templates/: base.html  chat.html  home.html
